@@ -13,4 +13,4 @@
         $("task_calendar").focus();     // Focus to invoke calendar popup.
       }
     }
-    crm.date_select_popup_with_dropdown("task_calendar", "task_due_at_hint");
+    crm.date_select_popup("task_calendar", "task_due_at_hint");
