@@ -1,33 +1,19 @@
 var crm = {
-  //----------------------------------------------------------------------------
-  date_select_popup: function(id) {
-    $(id).observe("focus", function() {
-      if (!$(id).calendar_was_shown) {    // The field recieved initial focus, show the calendar.
-        new CalendarDateSelect(this, { month_year: "label",  year_range: 10, before_close: function() { this.calendar_was_shown = true } });
-      } else {
-        $(id).calendar_was_shown = null;  // Focus is back from the closed calendar, make it show up again.
-      }
-    });
-
-    $(id).observe("blur", function() {
-      $(id).calendar_was_shown = null;    // Get the calendar ready if we loose focus.
-    });
-  },
-
-  //----------------------------------------------------------------------------
-  date_select_popup_with_dropdown: function(id, dropdown_id) {
+  date_select_popup: function(id, dropdown_id) {
     $(id).observe("focus", function() {
       if (!$(id).calendar_was_shown) {    // The field recieved initial focus, show the calendar.
         var calendar = new CalendarDateSelect(this, { month_year: "label",  year_range: 10, before_close: function() { this.calendar_was_shown = true } });
-        calendar.buttons_div.build("span", { innerHTML: " | ", className: "button_seperator" });
-        calendar.buttons_div.build("a", { innerHTML: "Back to List", href: "#", onclick: function() {
-          calendar.close();                   // Hide calendar popup.
-          $(id).hide();                       // Hide date edit field.
-          $(dropdown_id).show();              // Show dropdown.
-          $(dropdown_id).selectedIndex = 0;   // Select first dopdown item.
-          $(id).update("");                   // Reset date field value.
-          return false;
-        }.bindAsEventListener(this) });
+        if (dropdown_id) {
+          calendar.buttons_div.build("span", { innerHTML: " | ", className: "button_seperator" });
+          calendar.buttons_div.build("a", { innerHTML: "Back to List", href: "#", onclick: function() {
+            calendar.close();                   // Hide calendar popup.
+            $(id).hide();                       // Hide date edit field.
+            $(dropdown_id).show();              // Show dropdown.
+            $(dropdown_id).selectedIndex = 0;   // Select first dopdown item.
+            $(id).update("");                   // Reset date field value.
+            return false;
+          }.bindAsEventListener(this) });
+        }
       } else {
         $(id).calendar_was_shown = null;  // Focus is back from the closed calendar, make it show up again.
       }
